Добавил показ сообщения о загрузке на редактирование неверного файла

--- a/index.html
+++ b/index.html
@@ -224,6 +224,19 @@
   </template>
 
   <!-- Сообщение с ошибкой загрузки изображения -->
+  <template id="wrong">
+    <section class="error">
+      <div class="error__inner">
+        <h2 class="error__title">Выбран неверный тип файла</h2>
+        <div class="error__buttons">
+          <button type="button" class="error__button" id="load">Загрузить другой файл</button>
+          <button type="button" class="error__button" id="cancel">Отмена</button>
+        </div>
+      </div>
+    </section>
+  </template>
+
+  <!-- Сообщение с ошибкой загрузки изображения -->
   <template id="error">
     <section class="error">
       <div class="error__inner">
