--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <section class="img-upload">
         <div class="img-upload__wrapper">
           <h2 class="img-upload__title  visually-hidden">Загрузка фотографии</h2>
-          <form class="img-upload__form" id="upload-select-image" method="post" enctype="multipart/form-data" autocomplete="off">
+          <form class="img-upload__form" id="upload-select-image" method="post" enctype="multipart/form-data" action="https://js.dump.academy/kekstagram" autocomplete="off">
 
             <!-- Изначальное состояние поля для загрузки изображения -->
             <fieldset class="img-upload__start">
@@ -267,5 +267,6 @@
   <script src="js/pictures.js"></script>
   <script src="js/upload.js"></script>
   <script src="js/filter.js"></script>
+  <script src="js/validation.js"></script>
 </body>
 </html>
