--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@
 
   <script src="js/pictures.js"></script>
   <script src="js/upload.js"></script>
+  <script src="js/scale.js"></script>
   <script src="js/filter.js"></script>
   <script src="js/validation.js"></script>
 </body>
