--- a/index.html
+++ b/index.html
@@ -264,7 +264,11 @@
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
 
+  <script src="js/util.js"></script>
+  <script src="js/data.js"></script>
   <script src="js/pictures.js"></script>
+  <script src="js/big-picture.js"></script>
+  <script src="js/sort.js"></script>
   <script src="js/upload.js"></script>
   <script src="js/scale.js"></script>
   <script src="js/filter.js"></script>
