--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@
   <script src="js/sort.js"></script>
   <script src="js/upload.js"></script>
   <script src="js/scale.js"></script>
+  <script src="js/slider.js"></script>
   <script src="js/filter.js"></script>
   <script src="js/validation.js"></script>
 </body>
