--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@
   </template>
 
   <script src="js/util.js"></script>
+  <script src="js/backend.js"></script>
   <script src="js/data.js"></script>
   <script src="js/pictures.js"></script>
   <script src="js/big-picture.js"></script>
@@ -274,5 +275,6 @@
   <script src="js/slider.js"></script>
   <script src="js/filter.js"></script>
   <script src="js/validation.js"></script>
+  <script src="js/form.js"></script>
 </body>
 </html>
