Добавил фильтрацию изображений пользователей, устранение дребезга и показ комментариев.

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           </div>
 
           <!-- Комментарии к изображению -->
-          <div class="social__comment-count">5 из <span class="comments-count">125</span> комментариев</div>
+          <div class="social__comment-count"><span id="comments-current">5</span> из <span class="comments-count">125</span> комментариев</div>
           <ul class="social__comments">
             <li class="social__comment">
               <img class="social__picture" src="img/avatar-4.svg" alt="Аватар комментатора фотографии" width="35" height="35">
@@ -270,11 +270,13 @@
   <script src="js/pictures.js"></script>
   <script src="js/big-picture.js"></script>
   <script src="js/sort.js"></script>
+  <script src="js/comments.js"></script>
   <script src="js/upload.js"></script>
   <script src="js/scale.js"></script>
   <script src="js/slider.js"></script>
   <script src="js/filter.js"></script>
   <script src="js/validation.js"></script>
   <script src="js/form.js"></script>
+  <script src="js/debounce.js"></script>
 </body>
 </html>
